--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Business Analytics, Data Visualization and Machine Learning</p>
         <div class="f6 f5-l lh-copy nested-copy-line-height nested-links">
           Has popular music truly changed over the last 50 years?
 We bring something different this time. Would it be possible to show the evolution of popular music over the last five decades using visualizations?
-We examined a dataset from Kaggle that contains more than 175.000 songs from the Spotify Website API. Find the link to the dataset below. Some of the most relevant variables.
+We examined a dataset from Kaggle that contains more than 175.000 songs from the Spotify Website API. Find the link to the dataset below. Some of the most relevant variables:
  artists (List of artists mentioned) release_date (Date of release) name (Name of the song) acousticness (Ranges from 0 to 1) danceability (Ranges from 0 to 1) energy (Ranges from 0 to 1) duration_ms (Integer typically ranging from 200k to 300k) valence (Ranges from 0 to 1) popularity (Ranges from 0 to 100) loudness (Float typically ranging from -60 to 0) year (Ranges from 1921 to 2020)  After understanding the dataset with an Exploratory Data Analysis and applying some transformations, we created our figures.
         </div>
           <a href="https://oriolvila.github.io/Oriol_Portfolio/post/project-4/" class="ba b--moon-gray bg-light-gray br2 color-inherit dib f7 hover-bg-moon-gray link mt2 ph2 pv1">read more</a>
